# Nihilus

./: .gitignore  CMakeLists.txt  CMakePresets.json  Leaf_Data.json  Leaf_Data_0.json  Leaf_Data_1.json  Leaf_Data_10.json  Leaf_Data_100.json  Leaf_Data_101.json  Leaf_Data_102.json  Leaf_Data_103.json  Leaf_Data_104.json  Leaf_Data_105.json  Leaf_Data_106.json  Leaf_Data_107.json  Leaf_Data_108.json  Leaf_Data_109.json  Leaf_Data_11.json  Leaf_Data_110.json  Leaf_Data_111.json  Leaf_Data_112.json  Leaf_Data_113.json  Leaf_Data_114.json  Leaf_Data_115.json  Leaf_Data_116.json  Leaf_Data_117.json  Leaf_Data_118.json  Leaf_Data_119.json  Leaf_Data_12.json  Leaf_Data_120.json  Leaf_Data_121.json  Leaf_Data_122.json  Leaf_Data_123.json  Leaf_Data_124.json  Leaf_Data_125.json  Leaf_Data_126.json  Leaf_Data_127.json  Leaf_Data_128.json  Leaf_Data_129.json  Leaf_Data_13.json  (+295 more)
.github/workflows/: Build-Benchmark.yml  Build-Clean.yml  Build-Dev.yml  Build-Nh.yml  Build-Nihilus-Only.yml  Build-Vs-Llama-Benchmark.yml  DeleteRuns.yml
cmake/: BuildFeatureTester.sh  BuildFeatureTesterArch.bat  BuildFeatureTesterArch.sh  CMakeLists.txt  flags_and_options.cmake  main.cpp  nihilusConfig.cmake.in  nihilus_cpu_instructions.hpp.in  nihilus_detect_architecture.cmake  nihilus_detect_max_thread_count.cmake
cmake/cuda/: CMakeLists.txt  flags_and_options.cmake
cmake/detection/: CMakeLists.txt  main.cpp  nihilus_cpu_arch.hpp.in  nihilus_cpu_cache_size.hpp.in  nihilus_cpu_instructions.hpp.in  nihilus_cpu_properties.hpp.in  nihilus_detect_cpu_arch.cmake  nihilus_detect_cpu_architecture.cmake  nihilus_detect_cpu_cache_size.cmake  nihilus_detect_cpu_cache_sizes.cmake  nihilus_detect_cpu_properties.cmake  nihilus_detect_gpu_arch.cmake  nihilus_detect_gpu_architecture.cmake  nihilus_detect_gpu_cache_size.cmake  nihilus_detect_gpu_properties.cmake  nihilus_detect_max_thread_count.cmake  nihilus_gpu_arch.hpp.in  nihilus_gpu_cache_size.hpp.in  nihilus_gpu_instructions.hpp.in  nihilus_gpu_properties.hpp.in  nihilus_max_thread_count.hpp.in  nihilus_thread_count.hpp.in
include/: # PowerShell script to recursively.ps1  nihilus
include/nihilus/: index.hpp
include/nihilus-incl/: index.hpp
include/nihilus-incl/benchmarking/: apple_arm_pref_events.hpp  event_count.hpp  event_counter.hpp  linux_pref_events.hpp  metrics.hpp  windows_pref_events.hpp
include/nihilus-incl/common/: aligned_vector.hpp  allocator.hpp  array.hpp  behavioral_axes.hpp  common.hpp  compare.hpp  concepts.hpp  config.hpp  core_bases.hpp  core_traits.hpp  data.hpp  data_traits.hpp  data_types.hpp  debugging_io.hpp  dim_traits.hpp  dimensions.hpp  exception.hpp  file_io.hpp  harbinger.hpp  input_collector.hpp  iterator.hpp  kernel_traits.hpp  kernel_type_profile_traits.hpp  memory_buffer.hpp  memory_mapped_file.hpp  model.hpp  model_config.hpp  model_parser.hpp  model_serializer.hpp  model_traits.hpp  monolithic_dispatcher.hpp  op_traits.hpp  optional.hpp  parse_entity.hpp  rt_string.hpp  string_literal.hpp  sub_kernel_traits.hpp  tokenizer.hpp  tokenizer_traits.hpp  tuple.hpp  (+3 more)
include/nihilus-incl/cpu/: arm_neon.hpp  arm_sve2.hpp  avx_2.hpp  avx_512.hpp  collect_indices.hpp  common.hpp  cpu_arch.hpp  fallback.hpp  memory_buffer.hpp  memory_mapped_file.hpp  nihilus_cpu_arch.hpp  nihilus_cpu_cache_size.hpp  nihilus_cpu_cache_sizes.hpp  nihilus_cpu_instructions.hpp  nihilus_cpu_properties.hpp  nihilus_max_thread_count.hpp  thread_pool.hpp
include/nihilus-incl/cpu/simd/: arm_neon.hpp  arm_sve2.hpp  avx_2.hpp  avx_512.hpp  common.hpp  nihilus_cpu_instructions.hpp  nihilus_thread_count.hpp
include/nihilus-incl/cuda/: common.cuh  common.hpp  cuda_12.cuh  cuda_12.hpp  memory_buffer.cuh  memory_buffer.hpp  nihilus_gpu_arch.hpp  nihilus_gpu_cache_size.hpp  nihilus_gpu_instructions.hpp  nihilus_gpu_properties.hpp  thread_pool.hpp
include/nihilus-incl/db/: core.hpp  db.hpp  file_io.hpp  format.hpp
include/nihilus-incl/infra/: behavioral_axes.hpp  core_bases.hpp  core_traits.hpp  coro.hpp  file_loader.hpp  harbinger.hpp  jitter_generator.hpp  mega_fused_kernels.hpp  model.hpp  model_parser.hpp  model_serializer.hpp  model_traits.hpp  monolithic_dispatcher.hpp  nihilus_cathedral.hpp  tokenizer.hpp  tokenizer_traits.hpp
include/nihilus/common/: allocator.hpp  array.hpp  behavioral_axes.hpp  common.hpp  compare.hpp  concepts.hpp  config.hpp  core_bases.hpp  core_traits.hpp  data_types.hpp  debugging_io.hpp  enum.hpp  h_params.hpp  harbinger.hpp  input_session.hpp  iterator.hpp  kernel_traits.hpp  kernel_type_profile_traits.hpp  memory.hpp  memory_buffer.hpp  memory_mapped_file.hpp  model.hpp  model_graph_data.hpp  model_parser.hpp  model_serializer.hpp  model_traits.hpp  monolithic_dispatcher.hpp  parse_entity.hpp  status_handler.hpp  string_literal.hpp  tokenizer.hpp  tokenizer_traits.hpp  tuple.hpp  type_traits.hpp  utility.hpp  vocab.hpp
include/nihilus/cpu/: cpu_arch.hpp  thread_pool.hpp  thread_strategy.hpp
include/nihilus/cpu/simd/: arm_neon.hpp  arm_sve2.hpp  avx_2.hpp  avx_512.hpp  common.hpp  nihilus_cpu_instructions.hpp  nihilus_thread_count.hpp
src/: CMakeLists.txt  dllmain.cpp  main.cpp  main.cu  main_deploy.cpp  main_deploy.cu
src/cuda/: cuda_12.cu  kernel.cuh  test.hpp
src/nihilus-only/: main.cpp
tests/nihilus-cuda/: main.cpp
tests/nihilus-only/: CMakeLists.txt  main.cpp
tests/nihilus-only-cuda/: CMakeLists.txt  main.cpp  main.cu
tests/nihilus-only/vs-llama-benchmark/: main.cpp
tests/vs-llama-benchmark/: CMakeLists.txt  main.cpp
tests/vs-llama-benchmark/common/: build-info.cpp  common.h  json.hpp  sampling.h
tests/vs-llama-clean/: CMakeLists.txt  main.cpp
tests/vs-llama-clean/common/: build-info.cpp  chat.cpp  json-schema-to-grammar.cpp
tests/vs-llama-cuda/: CMakeLists.txt  main.cpp  main.cu
tests/vs-llama-cuda/common/: build-info.cpp  common.cpp
tests/vs-llama-cuda/common/minja/: minja.hpp
tests/vs-llama-dev/: CMakeLists.txt  main.cpp
tests/vs-llama-dev/common/: build-info.cpp  json-schema-to-grammar.cpp  sampling.h
